kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idta-editor
  labels:
    app.kubernetes.io/name: idta-submodel-editor
    app.kubernetes.io/component: namespace
